# areq

./: Cargo.toml
examples/: ranges.rs
src/: build.rs  lib.rs  pure.rs  range.rs  version.rs
src/pure/: prerelease.rs
src/range/: numeric_impls.rs  parse.rs  tests.rs
src/version/: identifier.rs  pure.rs
src/version/pure/: prerelease.rs  tests.rs
